[tool.poetry]
name = "daysapi"
version = "0.1.0"
description = ""
authors = ["Mr.Nobody <mrcartoonster@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
pytest = "^6.2.4"
pytest-picked = "^0.4.6"
pytest-clarity = "^1.0.1"
rich = "^10.4.0"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
