[tool.poetry]
name = "daysapi"
version = "0.1.0"
description = ""
authors = ["Mr.Nobody <mrcartoonster@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
pendulum = "^2.1.2"
datefinder = "^0.7.1"
workalendar = "^15.3.0"
orjson = "^3.6.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
pytest = "^6.2.4"
pytest-picked = "^0.4.6"
pytest-clarity = "^1.0.1"
rich = "^10.4.0"
ipython = "^7.24.1"
pre-commit = "^2.13.0"
pytest-pythonpath = "^0.7.3"
pytest-emoji = "^0.2.0"
pytest-instafail = "^0.4.2"
pytest-cov = "^2.12.1"
interrogate = "^1.4.0"
requests = "^2.25.1"
pyinspect = "^0.0.8"
hypothesis = "^6.14.3"
schemathesis = "^3.9.6"
pytest-mimesis = "^1.1.0"
mimesis = "^4.1.3"
uvicorn = "^0.15.0"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv -p no:warnings"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify",
  "all: Schemathesis test for all endpoints.",
  "days: Schemathesis test for just /business/days endpoint.",
  "cal: Schemathesis test for arithmetic endpoint."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
